Written and tested template for Batch File Processing.

--- a/2025/2025-12.md
+++ b/2025/2025-12.md
@@ -48,3 +48,30 @@
 ## 2025-12-21
 
 - Planning for next week. Market analysis, projects
+
+## 2025-12-22
+**Template**
+- Written and tested template for "Batch File Processing." 
+Add Batch File Processor - desktop utility for text file operations
+
+Implemented Qt6-based Windows application for batch processing of text files (.txt, .csv) with the following features:
+
+Core functionality:
+- Remove empty lines and trim whitespace
+- Sort lines alphabetically
+- Merge multiple files into one
+- Rename files using pattern templates ({index}, {original})
+- Generate detailed processing report
+
+Technical details:
+- Clean architecture: separated UI (MainWindow), processing logic (FileProcessor), reporting (Report), and utilities (Utils)
+- UTF-8 encoding support
+- Graceful error handling - continues processing on individual file failures
+- Non-recursive folder scanning
+
+Use cases:
+- Data cleaning and preparation
+- Bulk file renaming
+- Text normalization for further processing
+
+Project structure follows MVP approach with all essential features included for single evening implementation.
