feat: implement log parsing logic and custom output directory selection - SimpleDataParser_CSV

--- a/2025/2025-12.md
+++ b/2025/2025-12.md
@@ -74,4 +74,18 @@ Use cases:
 - Bulk file renaming
 - Text normalization for further processing
 
-Project structure follows MVP approach with all essential features included for single evening implementation.
+## 2025-12-23
+
+### Devlog: SimpleDataParser_CSV
+
+### Update: Core Logic Integration & Output Management
+
+**Key Changes:**
+* **Processing Workflow:** Implemented the `processFile` method, integrating `Parser`, `Logger`, and `CsvWriter` into a single execution flow.
+* **Dynamic Output Directory:** Added a directory selection feature using `QFileDialog`, allowing users to define where `output.csv` and `errors.log` are saved.
+* **Data Export:**
+    * Validated rows are now automatically exported to a structured CSV file.
+    * Malformed entries are captured by the `Logger` and saved to an error log with line-specific details.
+* **Bug Fixes:** Resolved linker errors (LNK2019) by providing the missing implementation for the main processing logic.
+
+**Tech Stack:** C++17, Qt 6 (Widgets), CMake.
